--- a/Slide4.html
+++ b/Slide4.html
@@ -129,7 +129,7 @@ const tooltipLine = svg.append('line');
 								  .style("background", "white")
                                   .style("left",(d3.event.pageX)+"px")
                                   .style("top",(d3.event.pageY)+"px")          
-                                  .html("Year: " +filteredData[0].Year +"<br>  GlobalSales: "+filteredData[0].GlobalSales+"  <br> NASales: "+filteredData[0].NASales);
+                                  .html("Year: " +filteredData[0].Year +"<br>  GlobalSales: "+filteredData[0].GlobalSales+"  <br> OtherSales: "+filteredData[0].NASales);
 								  });
  */
    // Add the X Axis
