--- a/Slide4.html
+++ b/Slide4.html
@@ -181,7 +181,7 @@ const tooltipLine = svg.append('line');
 								  .style("background", "white")
                                   .style("left",(d3.event.pageX)+"px")
                                   .style("top",(d3.event.pageY)+"px")          
-                                  .html("Year: " +filteredData[0].Year +"<br> <i style=\"color:steelblue;\"> GlobalSales: "+filteredData[0].GlobalSales+" </i><br><i style=\"color:Brown;\"> NASales: "+filteredData[0].OtherSales)+"</i>";
+                                  .html("Year: " +filteredData[0].Year +"<br> <i style=\"color:steelblue;\"> GlobalSales: "+filteredData[0].GlobalSales+" </i><br><i style=\"color:Brown;\"> OtherSales: "+filteredData[0].OtherSales)+"</i>";
 								  })	
 
 /*								  
